# masters-thesis

./: .gitignore  README.md  pyproject.toml  tmp.txt
masters_thesis/: get_repo_contents.ipynb  helper.py
mt/: add_starz.ipynb  analysis.py  clean_features.py  code_featurization.ipynb  definitions.py  featurize_repo.py  github_data.py  helper.py  n_ppline.py  prediction_feat_importance.py  process_features.py  pull_repos.py  repo_to_pt.py  stars_calc.py  training.py  training_regular.py  training_sb.py
mt/notebooks/: CFGs.ipynb  GAT_application.ipynb  GAT_datasets.ipynb  asts_to_DG.ipynb  code_features_and_highlighting.ipynb  code_featurization.ipynb  model_testing_notebook.ipynb  reading_sqlite_db.ipynb  repo_process_gin_gat.ipynb  repo_process_initial.ipynb  repo_process_main.ipynb  repo_process_set2set.ipynb  simple_GAT.ipynb  simple_repo_process.ipynb
