[tool.poetry]
name = "mt"
version = "0.1.0"
description = ""
authors = ["Foxicution <foxicution@gmail.com>"]
readme = "README.md"
packages = [{include = "mt"}]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.0.2"
tree-sitter = "^0.20.1"
tree-sitter-languages = "^1.5.0"
networkx = "^3.1"
matplotlib = "^3.7.1"
function-pipes = "^0.1.2"
requests = "^2.31.0"
pygraphviz = "^1.11"
uuid6 = "^2023.5.2"
aiohttp = "^3.9.0"
aiofiles = "^23.2.1"
pydriller = "^2.6"
radon = "^6.0.1"
nltk = "^3.8.1"
pylint = "^3.0.2"
gitpython = "^3.1.40"
scikit-learn = "^1.3.2"
seaborn = "^0.13.0"



[tool.poetry.group.dev.dependencies]
ipykernel = "^6.23.1"
mypy = "^1.3.0"
types-requests = "^2.31.0.1"
black = "^23.11.0"
isort = "^5.12.0"
euporie = "^2.6.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
