[tool.poetry]
name = "mt"
version = "0.1.0"
description = ""
authors = ["Foxicution <foxicution@gmail.com>"]
readme = "README.md"
packages = [{include = "mt"}]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.0.2"
tree-sitter = "^0.20.1"
tree-sitter-languages = "^1.5.0"
networkx = "^3.1"
matplotlib = "^3.7.1"
function-pipes = "^0.1.2"
requests = "^2.31.0"
pygraphviz = "^1.11"
uuid6 = "^2023.5.2"
aiohttp = "^3.9.0"
aiofiles = "^23.2.1"
pydriller = "^2.6"
radon = "^6.0.1"
nltk = "^3.8.1"
pylint = "^3.0.2"
gitpython = "^3.1.40"
scikit-learn = "^1.3.2"
seaborn = "^0.13.0"
torch = {version = "^2.2.2+cu118", source = "cu118"}
torchvision = {version = "^0.17.2+cu118", source = "cu118"}
torchaudio = {version = "^2.2.2+cu118", source = "cu118"}
torch-geometric = "^2.5.2"
captum = "^0.7.0"
sentence-transformers = "^2.6.1"
pyvis = "^0.3.2"
chardet = "^5.2.0"
packaging = "^24.0"
ninja = "^1.11.1.1"
wheel = "^0.43.0"
tabulate = "^0.9.0"
torchviz = "^0.0.2"
python-scalpel = "^1.0b0"
py2cfg = "^0.7.3"
pycg = "^0.0.8"
modulegraph = "^0.19.6"
pydeps = "^1.12.20"
pyan3 = "^1.2.0"
import-deps = "^0.3.0"
snakefood3 = "^0.0.7"
python-graphs = "^1.2.3"
igraph = "^0.11.5"

[tool.poetry.group.dev.dependencies]
mypy = "^1.3.0"
types-requests = "^2.31.0.1"
black = "^23.11.0"
isort = "^5.12.0"
euporie = "^2.6.2"
ipykernel = "^6.29.4"
jupyter = "^1.0.0"
ipywidgets = "^8.1.2"

[[tool.poetry.source]]
name = "cu118"
url = "https://download.pytorch.org/whl/cu118"
priority = "explicit"

[tool.isort]
skip_gitignore = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
